# toggle-decorator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
requirements/: dev.in  dev.txt
src/: computation.py  decorators.py  toggle_decorator.py
togdec/: __main__.py  computation.py
